--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,9 +37,14 @@ header:
     align: r
     show_logo: true
     show_language: false
-    show_day_night: true
+    show_theme_chooser: true
     show_search: true
     highlight_active_link: false
+    logo:
+      # Logo text
+      text: "VIG Data Collection System"
+      # Logo filename in `assets/media/` folder
+      filename: "logo.svg"
 
 # Site footer
 
