--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -40,6 +40,8 @@ header:
     show_theme_chooser: true
     show_search: true
     highlight_active_link: true
+    logo:
+      filename: logo.svg
       # Logo text
       # Logo filename in `assets/media/` folder
 
