--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -49,7 +49,9 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: 
+      '© {year} Me. This work is licensed under {license}
+      [Illustrations by Storyset](https://storyset.com/)'
     license:
       enable: true
       allow_derivatives: false
